--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 4px;
     padding: 1px;
     box-sizing: border-box;
@@ -9,27 +9,29 @@
     background-color: #000000;
     border-radius: 4px;
 }
+
 .navbar {
-    overflow:auto;
+    overflow: auto;
 }
-.navbar li{
-    float : left;
+
+.navbar li {
+    float: left;
     margin: 3px 30px;
 }
 
 
 
-.addtask{
+.addtask {
     justify-content: center;
     align-items: center;
 }
 
-#taskinput{
+#taskinput {
     width: 250px;
     height: 30px;
 }
 
-.completed{
+.completed {
     background-color: aquamarine;
     opacity: 70%;
 }
@@ -37,11 +39,12 @@
 .completed div {
     display: flex;
 }
-.completed div li{
-     flex:1;
+
+.completed div li {
+    flex: 1;
 }
 
-.missed{
+.missed {
     background-color: rgb(255, 174, 174);
     opacity: 70%;
 }
@@ -50,12 +53,12 @@
     display: flex;
 }
 
-.missed div li{
-    flex:1;
+.missed div li {
+    flex: 1;
 }
 
-.pending div{
-    background-color:aqua;
+.pending div {
+    background-color: aqua;
     display: flex;
 }
 
@@ -63,33 +66,48 @@
     flex: 1;
 }
 
-li{
+li {
     list-style: none;
 }
 
 .loader {
-    border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #3498db; /* Blue */
+    border: 16px solid #f3f3f3;
+    /* Light grey */
+    border-top: 16px solid #3498db;
+    /* Blue */
     border-radius: 50%;
     width: 50px;
     height: 50px;
     animation: spin 2s linear infinite;
     margin-top: 15%;
     margin-left: 40%;
-  }
-  
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
+}
 
-  button{
-      cursor: pointer;
-  }
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
 
-.todo-container{
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+button {
+    cursor: pointer;
+}
+
+.todo-container {
     justify-content: center;
     align-items: center;
     margin-left: 20%;
     margin-right: 20%;
+}
+
+
+
+#auth {
+    justify-content: center;
+    justify-items: center;
+    margin: 100px 100px;
 }
